--- a/index.html
+++ b/index.html
@@ -5,16 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CipherLab - Universal Code Converter</title>
     <meta name="description" content="Transform text into multiple coding formats including Morse, Binary, Hex, and more with bi-directional conversion" />
-    <meta name="author" content="Lovable" />
+    <meta name="author" content="Shyam D." />
 
-    <meta property="og:title" content="code-conveyor-belt" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <!-- Open Graph Meta Tags -->
+    <meta property="og:title" content="CipherLab - Universal Code Converter" />
+    <meta property="og:description" content="Convert text to and from Morse, Binary, Hex, and more in a fast and easy way." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <!-- You can replace this with your own hosted image -->
+    <meta property="og:image" content="/https://thumbs.dreamstime.com/b/chainlink-link-token-cryptocurrency-vector-background-golden-coin-logo-chainlink-link-token-cryptocurrency-vector-background-246795773.jpg />
 
+    <!-- Twitter Meta Tags -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:site" content="@your_twitter_handle" />
+    <meta name="twitter:image" content="/your-logo.png" />
   </head>
 
   <body>
