--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CipherLab - Universal Code Converter</title>
     <meta name="description" content="Transform text into multiple coding formats including Morse, Binary, Hex, and more with bi-directional conversion" />
-    <meta name="author" content="Shyam D." />
+    <meta name="author" content="Shyam and Abhinav" />
 
     <!-- Open Graph Meta Tags -->
     <meta property="og:title" content="CipherLab - Universal Code Converter" />
