--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <meta property="og:description" content="Convert text to and from Morse, Binary, Hex, and more in a fast and easy way." />
     <meta property="og:type" content="website" />
     <!-- You can replace this with your own hosted image -->
-    <meta property="og:image" content="/https://thumbs.dreamstime.com/b/chainlink-link-token-cryptocurrency-vector-background-golden-coin-logo-chainlink-link-token-cryptocurrency-vector-background-246795773.jpg />
+    <meta property="og:image" content="https://thumbs.dreamstime.com/b/chainlink-link-token-cryptocurrency-vector-background-golden-coin-logo-chainlink-link-token-cryptocurrency-vector-background-246795773.jpg" />
 
     <!-- Twitter Meta Tags -->
     <meta name="twitter:card" content="summary_large_image" />
