Update index.html and changed favicon logo

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>CipherLab - Universal Code Converter</title>
     <meta name="description" content="Transform text into multiple coding formats including Morse, Binary, Hex, and more with bi-directional conversion" />
     <meta name="author" content="Shyam and Abhinav" />
+    <link rel="icon" href="https://thumbs.dreamstime.com/b/chainlink-link-token-cryptocurrency-vector-background-golden-coin-logo-chainlink-link-token-cryptocurrency-vector-background-246795773.jpg" type="image/png" />
 
     <!-- Open Graph Meta Tags -->
     <meta property="og:title" content="CipherLab - Universal Code Converter" />
